Convert to Java 11.