@@ -15,54 +15,52 @@
  */
 package com.codahale.passpol;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse.BodyHandlers;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 
 class HaveIBeenPwned implements BreachDatabase {
+  private final HttpClient client;
   private final int threshold;
 
-  HaveIBeenPwned(int threshold) {
+  HaveIBeenPwned(HttpClient client, int threshold) {
+    this.client = client;
     this.threshold = threshold;
   }
 
   @Override
   public boolean contains(String password) throws IOException {
     try {
-      final MessageDigest sha1 = MessageDigest.getInstance("SHA1");
-      final String hash = hex(sha1.digest(PasswordPolicy.normalize(password)));
-      final String prefix = hash.substring(0, 5);
-      final String suffix = hash.substring(5);
-      final String url = "https://api.pwnedpasswords.com/range/" + prefix;
-      final HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
-      conn.setRequestProperty("User-Agent", "passpol");
-      if (conn.getResponseCode() != 200) {
-        throw new IOException("Unexpected response from server: " + conn.getResponseCode());
+      var hash = hex(MessageDigest.getInstance("SHA1").digest(PasswordPolicy.normalize(password)));
+      var prefix = hash.substring(0, 5);
+      var suffix = hash.substring(5);
+      var request =
+          HttpRequest.newBuilder()
+              .uri(URI.create("https://api.pwnedpasswords.com/range/" + prefix))
+              .GET()
+              .header("User-Agent", "passpol")
+              .build();
+      var response = client.send(request, BodyHandlers.ofLines());
+      if (response.statusCode() != 200) {
+        throw new IOException("Unexpected response from server: " + response.statusCode());
       }
-
-      try (InputStream in = conn.getInputStream();
-          InputStreamReader r = new InputStreamReader(in, StandardCharsets.UTF_8);
-          BufferedReader reader = new BufferedReader(r)) {
-        return reader
-            .lines()
-            .filter(s -> s.startsWith(suffix))
-            .mapToInt(s -> Integer.parseInt(s.split(":", 2)[1]))
-            .anyMatch(t -> t >= threshold);
-      }
-    } catch (NoSuchAlgorithmException | ArrayIndexOutOfBoundsException e) {
+      return response
+          .body()
+          .filter(s -> s.startsWith(suffix))
+          .mapToInt(s -> Integer.parseInt(s.split(":", 2)[1]))
+          .anyMatch(t -> t >= threshold);
+    } catch (NoSuchAlgorithmException | ArrayIndexOutOfBoundsException | InterruptedException e) {
       throw new IOException(e);
     }
   }
 
   private static String hex(byte[] bytes) {
-    final StringBuilder b = new StringBuilder(bytes.length * 2);
-    for (byte v : bytes) {
+    var b = new StringBuilder(bytes.length * 2);
+    for (var v : bytes) {
       b.append(String.format("%02X", v));
     }
     return b.toString();
